--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ repositories {
     mavenLocal()
 }
 
+configurations {
+    provided
+}
+sourceSets {
+    main { compileClasspath += configurations.provided }
+}
+
 dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.2.RELEASE'
     compile 'ch.qos.logback:logback-classic:1.1.7'
@@ -20,5 +27,17 @@ dependencies {
     compile 'org.springframework:spring-tx:4.3.1.RELEASE'
     compile 'org.springframework:spring-orm:4.3.1.RELEASE'
     compile 'com.mchange:c3p0:0.9.5.2'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.8.3'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
+
+//    provided group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+//    provided group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.2'
+
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    compile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.2'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
