--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,15 @@
          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">-->
 <web-app>
+    <filter>
+        <filter-name>authFilter</filter-name>
+        <filter-class>com.goit.gojavaonline.spring.mvc.utils.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>authFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>Dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
